--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/navigation_groups"
         android:icon="@drawable/ic_groups_black_24dp"
-        android:title="@string/groups" />
+        android:title="@string/personal_stats_groups" />
 
     <item
         android:id="@+id/navigation_payments"
